# browser-agent

./: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  setup.sh
llm/: chatgpt.py  deepseek.py  gemini.py  ollama.py
src/browser_llm_agent/: api_server.py  claude_raw.py  cli.py  mcp_client.py  mcp_server.py  prompts.py
src/browser_llm_agent/llm/: chatgpt.py  claude.py  ollama.py
src/browser_llm_agent/tools/: __init__.py  agent_tools.py  bash_tools.py  browser_tools.py  file_tools.py  git_tools.py  memory_tools.py  project_tools.py  registry.py  repl_tools.py  search_tools.py  todo_tools.py  workspace_tools.py
tools/: bash_tools.py  file_tools.py
